task2/k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:12
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        
        volumeMounts:
          - name: pg-storage
            mountPath: /var/lib/postresql/data
      volumes:
      - name: pg-storage
        persistentVolumeClaim:
          claimName: db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: http
